--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Oswald:wght@200&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300&family=Oswald:wght@200&display=swap');
+html,body{
+    width: 100%;
+    height: auto;
+    margin: 0;
+}
 nav::after{
     content: "";
     position: absolute;
@@ -23,11 +27,20 @@ margin-bottom: auto;
     display: flex;
 }
 
-main{
+main, .content{
     position: relative;
     display: flex;
     padding: 5rem;
     font-family: 'Montserrat', sans-serif;
+}
+.content{
+    display: block;
+}
+modal{
+    margin: auto;
+    position: fixed;
+    top: 20%;
+    left: 25%;
 }
 main .main-item{
     padding: 10px;
@@ -50,4 +63,41 @@ main .main-item .main-item-content{
 .col-6{
     width: 100%;
     height: 100%;
+}
+
+
+#Max{
+    max-height: 400px;
+    max-width: 500px;
+    margin: auto;
+}
+#Certeza{
+    font-size: 5rem;
+    color:yellow;
+    background-color: black;
+}
+#Max div.content{
+    padding: 1rem;
+}
+
+.lorem{
+    font-size: xx-small;
+    color: rebeccapurple;
+    animation-name: teste;
+    animation-duration: 1s;
+    animation-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
+    animation-iteration-count: infinite;
+}
+
+@keyframes teste{ 
+    from{font-size: large; color: aqua;}
+    to{font-size: xx-small;color: crimson;}
+}
+#Max .content button:first-child{
+    background-color: green;
+    box-shadow: none;
+}
+#Max .content button:nth-child(2){
+    background-color: red;
+    box-shadow: none;
 }
